[package]
name = "meet-my-software"
version = "0.1.0"
edition = "2024"
authors = ["Chirag Bangera <chiragfootball.bangera@gmail.com>"]

[dependencies]
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
microbit-v2 = "0.16.0"
panic-halt = "1.0.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"


[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm", "critical-section-single-core"]
